==> mstrens/oXs_locator_receiver_on_RP2040/src/lora_receiver.cpp <==
#include "hardware/spi.h"
#include "tools.h"
#include <stdio.h>
#include "pico/stdlib.h"
#include "config.h"
#include "lora_receiver.h"
#define LORA_REG_FIFO                               0x00  //oXsTx     Receiver
#define LORA_REG_OP_MODE                            0x01  // should be 0b10000xxx
#define LORA_REG_FRF_MSB                            0x06  //frequency (in steps of 61.035 Hz)
#define LORA_REG_FRF_MID                            0x07  //frequency
#define LORA_REG_FRF_LSB                            0x08  //frequency
#define LORA_REG_PA_CONFIG                          0x09  //power amplifier source and value eg. 0x8F for 17dbm on PA_boost
#define LORA_REG_PA_RAMP                            0x0A  //power amplifier ramp: only bits 3-0; ex: 1000= 62usec; default = 0x09 = 125usec
#define LORA_REG_OCP                                0x0B  // current protection: could be 0b00111011 (enabled at 240 ma)
#define LORA_REG_LNA                                0x0C  // gain in reception ex: 0b00100011max gain, no boost on LNA)
#define LORA_REG_FIFO_ADDR_PTR                      0x0D  // address of current byte to be read/writen in Fifo
#define LORA_REG_FIFO_TX_BASE_ADDR                  0x0E  // base of Tx fifo; default 0x80
#define LORA_REG_FIFO_RX_BASE_ADDR                  0x0F  // base of Rx fifo; default 0x00
#define LORA_REG_FIFO_RX_CURRENT_ADDR               0x10  // adress of start of last Rx packet received (can't be written)

void initSpi(){     // configure the SPI
    spi_init(SPI_PORT, 1000 * 1000);
    gpio_set_function(config.pinSpiMiso, GPIO_FUNC_SPI);
    gpio_set_function(config.pinSpiSck, GPIO_FUNC_SPI);
    gpio_set_function(config.pinSpiMosi, GPIO_FUNC_SPI);
    
    // Chip select is active-low, so we'll initialise it to a driven-high state
    gpio_init(config.pinSpiCs);
    gpio_set_dir(config.pinSpiCs, GPIO_OUT);
    gpio_put(config.pinSpiCs, 1);

  //DDRB |= (1<<2)|(1<<3)|(1<<5);    // SCK, MOSI and SS as outputs on PORTB (PB2,PB3,PB5)
  //DDRB &= ~(1<<4);                 // MISO as input (PB4)
  //PORTB |= (1<<2)  ;                // Set chip select high (PB2)
  
  //SPCR =  (1<<MSTR) |               // Set as Master, send most significant bit first (because bit is left on 0)
  //        (1<<SPR0) |               // divided clock by 16
  //        (1<<SPE);                 // Enable SPI, disable interrupt (bit7 on 0)
  //SPSR = 1 ;                        // Bit0 allows to multiply frequency by 2 (in master mode)
    uint8_t loraVersion = loraReadRegister(LORA_REG_VERSION); 
    if( loraVersion != 0x12) {
        locatorInstalled = false;
    } else {
        locatorInstalled = true;
    }
}

uint8_t loraSingleTransfer(uint8_t reg, uint8_t value) {  // only for internal use; Write and read one LORA register
    uint8_t response;
  SPI_SELECT ;
  spi_write_blocking(SPI_PORT, &reg, 1);
  spi_write_read_blocking(SPI_PORT, &value, &response, 1);
  SPI_UNSELECT ;
  return response;
  //uint8_t response;
  //SPI_SELECT ;
  //spiSend(reg);
  //response = spiSend(value);
  //SPI_UNSELECT ;
  //return response;
}

void loraReadRegisterBurst( uint8_t reg, uint8_t* dataIn, uint8_t numBytes) {
  SPI_SELECT ;
  uint8_t readReg = reg  & 0x7f; 
  spi_write_blocking(SPI_PORT, &readReg, 1);
  spi_read_blocking (SPI_PORT, 0, dataIn, numBytes);
  SPI_UNSELECT ;
  //SPI_SELECT ;
  //spiSend(reg & 0x7f);
  //for(size_t n = 0; n < numBytes; n++) {
  //      dataIn[n] = spiSend(0x00);
  //}
  //SPI_UNSELECT ;
}

void loraWriteRegisterBurst( uint8_t reg, uint8_t* dataOut, uint8_t numBytes) {
  SPI_SELECT ;
  uint8_t writeReg = reg | 0x80; 
  spi_write_blocking(SPI_PORT, &writeReg, 1);
  spi_write_blocking(SPI_PORT, dataOut, numBytes); 
  SPI_UNSELECT ;
  //SPI_SELECT ;
  //spiSend(reg | 0x80);
  //for(size_t n = 0; n < numBytes; n++) {
  //      spiSend(dataOut[n]);
  //}
  //SPI_UNSELECT ;
}
