==> mstrens/oXs_locator_receiver_on_esp8266/src/lora_receiver.cpp <==
#include "Arduino.h"
#include <SPI.h>
#include "config.h"
#include "lora_receiver.h"
#define LORA_REG_FIFO                               0x00  //oXsTx     Receiver
#define LORA_REG_OP_MODE                            0x01  // should be 0b10000xxx
#define LORA_REG_FRF_MSB                            0x06  //frequency (in steps of 61.035 Hz)
#define LORA_REG_FRF_MID                            0x07  //frequency
#define LORA_REG_FRF_LSB                            0x08  //frequency
#define LORA_REG_PA_CONFIG                          0x09  //power amplifier source and value eg. 0x8F for 17dbm on PA_boost
#define LORA_REG_PA_RAMP                            0x0A  //power amplifier ramp: only bits 3-0; ex: 1000= 62usec; default = 0x09 = 125usec
#define LORA_REG_OCP                                0x0B  // current protection: could be 0b00111011 (enabled at 240 ma)
#define LORA_REG_LNA                                0x0C  // gain in reception ex: 0b00100011max gain, no boost on LNA)
#define LORA_REG_FIFO_ADDR_PTR                      0x0D  // address of current byte to be read/writen in Fifo
#define LORA_REG_FIFO_TX_BASE_ADDR                  0x0E  // base of Tx fifo; default 0x80
#define LORA_REG_FIFO_RX_BASE_ADDR                  0x0F  // base of Rx fifo; default 0x00
#define LORA_REG_FIFO_RX_CURRENT_ADDR               0x10  // adress of start of last Rx packet received (can't be written)
#define LORA_REG_IRQ_FLAGS_MASK                     0x11  // Irq flag mask

void initSpi(){     // configure the SPI
    pinMode(SPI_CS, OUTPUT); // set the SS pin as an output
    digitalWrite(SPI_CS , HIGH);
    SPI.begin();
    SPI.beginTransaction(SPISettings(400000, MSBFIRST, SPI_MODE0));
    //SPI.setFrequency(1000000)
    // MISO = pin 12
    // MOSI = pin 13
    // SCLK = pin 14
    // CS   = pin 15
    
    // Chip select is active-low, so we'll initialise it to a driven-high state
    //gpio_init(config.pinSpiCs);
    //gpio_set_dir(config.pinSpiCs, GPIO_OUT);
    //gpio_put(config.pinSpiCs, 1);

    uint8_t loraVersion = loraReadRegister(LORA_REG_VERSION); 
    if( loraVersion != 0x12) {
        locatorInstalled = false;
    } else {
        locatorInstalled = true;
    }
    //Serial.print("lora Version= ");Serial.println(loraVersion, HEX) ;
}

uint8_t loraSingleTransfer(uint8_t reg, uint8_t value) {  // only for internal use; Write and read one LORA register
    uint8_t response = 0;
  SPI_SELECT ;
  SPI.transfer(reg);
  response = SPI.transfer(value);
  //spi_write_blocking(SPI_PORT, &reg, 1);
  //spi_write_read_blocking(SPI_PORT, &value, &response, 1);
  SPI_UNSELECT ;
  return response;
  //uint8_t response;
  //SPI_SELECT ;
  //spiSend(reg);
  //response = spiSend(value);
  //SPI_UNSELECT ;
  //return response;
}

void loraReadRegisterBurst( uint8_t reg, uint8_t* dataIn, uint8_t numBytes) {
  SPI_SELECT ;
  uint8_t readReg = reg  & 0x7f; 
  SPI.transfer(readReg);
  //spi_write_blocking(SPI_PORT, &readReg, 1);
  //spi_read_blocking (SPI_PORT, 0, dataIn, numBytes);
  SPI.transfer(dataIn, numBytes);
  SPI_UNSELECT ;
  //SPI_SELECT ;
  //spiSend(reg & 0x7f);
  //for(size_t n = 0; n < numBytes; n++) {
  //      dataIn[n] = spiSend(0x00);
  //}
  //SPI_UNSELECT ;
}

void loraWriteRegisterBurst( uint8_t reg, uint8_t* dataOut, uint8_t numBytes) {
  SPI_SELECT ;
  uint8_t writeReg = reg | 0x80; 
  SPI.transfer(writeReg);
  //spi_write_blocking(SPI_PORT, &writeReg, 1);
  SPI.transfer(dataOut, numBytes);
  //spi_write_blocking(SPI_PORT, dataOut, numBytes); 
  SPI_UNSELECT ;
  //SPI_SELECT ;
  //spiSend(reg | 0x80);
  //for(size_t n = 0; n < numBytes; n++) {
  //      spiSend(dataOut[n]);
  //}
  //SPI_UNSELECT ;
}
